[feat] PL train checkpoint
ghstack-source-id: eac173479cda2b8f9ea1149dfbac5ec9bc4bd91a
Pull Request resolved: https://github.com/facebookresearch/mmf/pull/1018

--- a/mmf/configs/defaults.yaml
+++ b/mmf/configs/defaults.yaml
@@ -172,7 +172,7 @@ trainer:
         max_epochs: null
         gradient_clip_val: 0.0
         num_sanity_val_steps: 0
-        checkpoint_callback: false
+        checkpoint_callback: true
         accumulate_grad_batches: 1
         val_check_interval: 1000
         log_every_n_steps: 100
@@ -180,6 +180,18 @@ trainer:
         limit_val_batches: 1.0
         # progress bar is turned off if want same logging format as `mmf_trainer`
         progress_bar_refresh_rate: 0
+        # `config.trainer.params.resume_from_checkpoint` always takes precedence over
+        # `config.checkpoint` such as `config.checkpoint.resume_file`,
+        # `config.checkpoint.resume_zoo` and `config.checkpoint.resume`.
+        # `resume_from_checkpoint` can take both file path and zoo identifier.
+        # Additional checkpoint customization is specified under config.checkpoint.
+        # If `resume_from_checkpoint` is not specified, then we default to using
+        # "current.ckpt" if `config.checkpoint.resume is True`, or "best.ckpt" if
+        # `config.checkpoint.resume_best is True`. Else, we read it from
+        # `config.checkpoint.resume_file` or `config.checkpoint.resume_zoo`
+        # (in that order). If `resume_from_checkpoint` is not specified, and if
+        # `config.checkpoint` is not specified, then no checkpoint file will be loaded.
+        resume_from_checkpoint: null
 
 # Configuration for evaluation
 evaluation:
